add the textarea counter

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+counter<!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -47,7 +47,7 @@
         </div>
     <div class="col-md-12 post-form">
           <form  action="" method="POST">
-            <h6 class="pull-right" id="counter">320 characters remaining</h6>
+            <h6 class="pull-right" id="counter"><span>320</span> characters remaining</h6>
             <textarea class="form-control counted" name="message" placeholder="Type in your message" rows="5" style="margin-bottom:10px;"></textarea>
             <div class="btn-group">
             <button type="button" class="btn btn-default btn-sml"><span class="glyphicon glyphicon-picture"></span>
